[project]
name = "mae298-team-a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aviary",
    "dymos>=1.15.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openmdao>=3.40.0",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
]

[tool.uv.sources]
aviary = {path = "Aviary"}
